# AntiLarsen

./: .gitignore  README.md
Developing/: dev.py
Jack_AntiLarsen/: CMakeLists.txt  LADSPA.cpp  Makefile  TODOS.txt  iir.cpp  iir.h  main.cpp  rta.cpp  test.cpp
Jack_AntiLarsen/imgui/: imconfig.h
Jack_AntiLarsen/imgui/libs/gl3w/GL/: gl3w.c  gl3w.h
Jack_AntiLarsen/imgui/opengl3/: Makefile  imgui.ini  imgui_impl_opengl3.cpp
Jack_AntiLarsen/include/: Analyzer.h  DSP.h  activeFilters.h  client.h  const.h  fastmath.h  iir.h  localtools.h  peaksFinder.h  rta.h
Jack_AntiLarsen/src/: Analyzer.cpp  DSP.cpp  activeFilters.cpp  analyzer.cpp  client.cpp  client.h  fastmath.cpp  iir.cpp  peaksFinder.cpp  rta.cpp
Solution/: .gitignore  CMakeLists.txt  audio.c  audio.h  iir.c  iir.h  main.c
